fixed backtracing bugs implemented: -new map data strcuture -new cheker on get neibors to elimated wrong path - refactor move method attempted to start text rendering